# my-kernels

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  justfile  pyproject.toml
.serena/: project.yml
benchmarks/cpp/: CMakeLists.txt
benchmarks/cpp/add/: bench_add.cpp
benchmarks/cpp/support/: benchmark.h
benchmarks/utils/: timer.py
cmake/: my_kernelsConfig.cmake.in
include/my_kernels/: add.h  vector_add.h
python/my_kernels/: __init__.py  _load_lib.py  ops.py
scripts/: init_runpod.sh  rsync_runpod.sh
src/: CMakeLists.txt
src/ops/add/: CMakeLists.txt  add.cpp  add_cpu.cpp  add_cuda.cu
src/pytorch/: register_ops.cpp
tests/: conftest.py
tests/correctness/: test_add.py
tests/cpp/: CMakeLists.txt
tests/cpp/add/: test_add_cpu.cpp  test_add_cuda.cpp
tests/cpp/support/: tensor_assert.h  test_macros.h
tests/perf_smoke/: test_perf_smoke.py
tests/python/: conftest.py
tests/python/correctness/: test_add.py
tests/python/dispatch/: test_device_dtype_layout.py
tests/python/perf_smoke/: test_perf_smoke.py
tests/reference/: __init__.py  add.py
