[project]
name = "my-kernels"
version = "0.1.0"
authors = [
    { name = "Bowen Tan", email = "bowentan78@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.11", "torch"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/my_kernels"]
cmake.build-type = "Release"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
